--- a/pages/docs/dragonite/config.mdx
+++ b/pages/docs/dragonite/config.mdx
@@ -107,9 +107,12 @@ bearer_token = "KOJI_SECRET"
 #recycle_invasion_limit = 940
 #recycle_on_jail=false
 #minimum_account_reuse_hours = 169
-#location_delay = 0
-#fort_location_delay = 0
 #scout_age_limit = 30
+location_delay = 3000
+fort_location_delay = 3000
+quest_layer_swap = false
+test_shadow_banned = true
+
 ```
 
 | Key | Default | Description |
