--- a/pages/docs/dragonite/config.mdx
+++ b/pages/docs/dragonite/config.mdx
@@ -58,21 +58,21 @@ enable = false
 #token_refresh_only = true
 ```
 
-⚠ Additional config variables 
-Do NOT change these unless you know what you are doing. ⚠
+⚠ Additional config variables.
+Do **NOT** change these unless you really know what you are doing! ⚠
 | Key | Default | Description |
 | :-- | :-- | :-- |
-| token_refresh_concurrency | 10 | define concurrency for the token background refresher |
-| token_init_concurrency | 1 | define concurrency for the token background initer |
-| token_init_interval_seconds | PTC: 1, NK: 180 | define the interval to request tokens |
-| remote_auth_timeout_seconds | 60 | define a timeout for remote auth requests |
-| remote_init_retry_delay_minutes | "" | define a delay for retrying remote auth requests |
-| token_init_start_delay_minutes | 5 | define a delay for starting the token initer |
-| token_refresh_days | 28 | define the days after which a token should be refreshed |
-| token_refresh_start_delay_minutes | 5 | define a delay for starting the token refresher |
-| ip_ban_backoff_minutes | 15 | define how to long to backoff an IP |
-| remote_auth_secret | "" | define a secret for remote auth requests if needed |
-| token_valid_days | "" | define the days a token is valid |
+| `token_refresh_concurrency` | 10 | define concurrency for the token background refresher |
+| `token_init_concurrency` | 1 | define concurrency for the token background initer |
+| `token_init_interval_seconds` | PTC: 1, NK: 180 | define the interval to request tokens |
+| `token_init_start_delay_minutes` | 5 | define a delay for starting the token initer |
+| `remote_auth_timeout_seconds` | 60 | define a timeout for remote auth requests |
+| `remote_init_retry_delay_minutes` |  | define a delay for retrying remote auth requests |
+| `remote_auth_secret` | "" | define a secret for remote auth requests if needed |
+| `token_refresh_days` | 28 | define the days after which a token should be refreshed |
+| `token_refresh_start_delay_minutes` | 5 | define a delay for starting the token refresher |
+| `ip_ban_backoff_minutes` | 15 | define how to long to backoff an IP |
+| `token_valid_days` |  | define the days a token is valid |
 
 ## Koji section
 
@@ -121,7 +121,7 @@ test_shadow_banned = true
 | `recycle_encounter_limit` | 9900 | (Advanced) Recommend keeping this value commented out. When an account has encountered this amount of pokemon it will be rotated. |
 | `recycle_invasion_limit` | 940 | (Advanced) Recommend keeping this value commented out. When an account has encountered this amount of invasions it will be rotated. |
 | `recycle_on_jail` | false | Enabling this setting will utilize significantly more accounts. Currently five accounts are assigned to one worker and will rotate while the worker is running. |
-| `location_delay` | 0 | This value, in milliseconds, will add a slight wait period while a worker is moving to a new location. Adding a slight delay has proven to decrease empty GMO results and positively impact scans overall. Recommend starting with 100, 200, 300, etc and monitoring overall results. |
+| `location_delay` | 0 | This value, in milliseconds, will add a slight wait period while a worker is moving to a new location. Adding a slight delay has proven to decrease empty GMO results and positively impact scans overall. Recommend starting with 2500+ and monitoring overall results. |
 | `fort_location_delay` | 0 | This value, in milliseconds, is the same as `location_delay` however it only impacts fort scans (gyms/pokestops). |
 | `minimum_account_reuse_hours` | 0 | This sets the amount of hours for accounts to "rest" until they can be reused. Recommended value is 169 hours (7 days). |
 | `scout_age_limit` | 30 | Configure age limit for scout queue entries |
@@ -129,14 +129,15 @@ test_shadow_banned = true
 | `quest_layer_swap` | true | This option for questing will hold on to AR Quests and try to move to 'ar only scans' over time. This may become default later (the current default is 'true' which means it will try and drop ar quests if you have them as required, unless your account is marked as ar banned). |
 
 ### Dynamic Location Delay
-Make location_delay(max) dynamic by tuning against initial_gmo_success_rate(percentage), limited by minimum_location_delay(min).
-This is applied per worker and resets to the max value(location_delay) after an account is rotated. Therefore this should not be used with recycle_on_jail set to true.
+Make `location_delay`(max) dynamic by tuning against `initial_gmo_success_rate`(percentage), limited by `minimum_location_delay`(min).
+
+This is applied per worker and resets to the max value(location_delay) after an account is rotated. Therefore this should NOT be used with `recycle_on_jail` set to true.
 Every 50 steps Dragonite checks the success rate of GMOs without retries and adjusts location delay accordingly.
 ```toml
 #Example
 location_delay = 7000
 initial_gmo_success_rate = 80
-minimum_location_delay = 3000
+minimum_location_delay = 3000 
 ```
 
 ## Accounts section
