--- a/pages/docs/dragonite/config.mdx
+++ b/pages/docs/dragonite/config.mdx
@@ -104,39 +104,35 @@ bearer_token = "KOJI_SECRET"
 
 ```toml
 [tuning]
-#recycle_gmo_limit = 4900
-#recycle_encounter_limit = 9900
-#recycle_invasion_limit = 940
-#recycle_on_jail=false
+#recycle_gmo_limit = 4990
+#recycle_encounter_limit = 9975
+#recycle_invasion_limit = 900
 #minimum_account_reuse_hours = 169
 #scout_age_limit = 30
-location_delay = 3000
-fort_location_delay = 3000
-quest_layer_swap = false
-test_shadow_banned = true
+#location_delay = 2500
+#fort_location_delay = 0
 
 ```
 
 | Key | Default | Description |
 | :-- | :-- | :-- |
-| `recycle_gmo_limit` | 4900 | (Advanced) Recommend keeping this value commented out. When the GMO limit is reached for a specific account it will be be rotated. |
-| `recycle_encounter_limit` | 9900 | (Advanced) Recommend keeping this value commented out. When an account has encountered this amount of pokemon it will be rotated. |
-| `recycle_invasion_limit` | 940 | (Advanced) Recommend keeping this value commented out. When an account has encountered this amount of invasions it will be rotated. |
-| `recycle_on_jail` | false | Enabling this setting will utilize significantly more accounts. Currently five accounts are assigned to one worker and will rotate while the worker is running. |
-| `location_delay` | 0 | This value, in milliseconds, will add a slight wait period while a worker is moving to a new location. Adding a slight delay has proven to decrease empty GMO results and positively impact scans overall. Recommend starting with 2500+ and monitoring overall results. |
-| `fort_location_delay` | 0 | This value, in milliseconds, is the same as `location_delay` however it only impacts fort scans (gyms/pokestops). |
+| `recycle_gmo_limit` | 4990 | (Advanced) Recommend keeping this value commented out. When the GMO limit is reached for a specific account it will be be rotated. |
+| `recycle_encounter_limit` | 9975 | (Advanced) Recommend keeping this value commented out. When an account has encountered this amount of pokemon it will be rotated. |
+| `recycle_invasion_limit` | 900 | (Advanced) Recommend keeping this value commented out. When an account has encountered this amount of invasions it will be rotated. |
+| `location_delay` | 2500 | This value, in milliseconds, will add a slight wait period while a worker is moving to a new location. Adding a slight delay has proven to decrease empty GMO results and positively impact scans overall. Recommend starting with 2500+ and monitoring overall results. |
+| `fort_location_delay` | 0 | This value, in milliseconds, is the same as `location_delay` however it only impacts fort scans (gyms/pokestops). When not specified, it uses the same value as `location_delay` |
 | `minimum_account_reuse_hours` | 0 | This sets the amount of hours for accounts to "rest" until they can be reused. Recommended value is 169 hours (7 days). |
 | `scout_age_limit` | 30 | Configure age limit for scout queue entries |
-| `test_shadow_banned` | false | Automatically test accounts for being shadow banned and marked as banned in database. |
-| `quest_layer_swap` | true | This option for questing will hold on to AR Quests and try to move to 'ar only scans' over time. This may become default later (the current default is 'true' which means it will try and drop ar quests if you have them as required, unless your account is marked as ar banned). |
+| `test_shadow_banned` | true | Automatically test accounts for being shadow banned and marked as banned in database. |
+| `quest_layer_swap` | false | This option for questing will hold on to AR Quests and try to move to 'ar only scans' over time. When set to 'true' it will try and drop ar quests if you have them as required, unless your account is marked as ar banned). |
 
 ### Dynamic Location Delay
 Make `location_delay`(max) dynamic by tuning against `initial_gmo_success_rate`(percentage), limited by `minimum_location_delay`(min).
 
-This is applied per worker and resets to the max value(location_delay) after an account is rotated. Therefore this should NOT be used with `recycle_on_jail` set to true.
+This is applied per worker and resets to the max value(location_delay) after an account is rotated.
 Every 50 steps Dragonite checks the success rate of GMOs without retries and adjusts location delay accordingly.
 ```toml
-#Example
+#Example configuration
 location_delay = 7000
 initial_gmo_success_rate = 80
 minimum_location_delay = 3000 
